[gd_scene load_steps=3 format=3 uid="uid://gl5hdp43qnoj"]

[ext_resource type="Script" path="res://scenes/experiments/controls/controls.gd" id="1_4m1dt"]

[sub_resource type="Theme" id="Theme_yn7ku"]

[node name="Node2D" type="Node2D"]
position = Vector2(466.5, 364)
script = ExtResource("1_4m1dt")

[node name="Button Main" type="Button" parent="."]
offset_left = 112.0
offset_top = -371.0
offset_right = 165.0
offset_bottom = -340.0
theme = SubResource("Theme_yn7ku")
text = "menu"

[node name="Button Reset" type="Button" parent="."]
offset_left = 56.0
offset_top = -371.0
offset_right = 104.0
offset_bottom = -340.0
theme = SubResource("Theme_yn7ku")
text = "reset"

[node name="Drag Label" type="Label" parent="."]
offset_left = -461.5
offset_top = -29.0
offset_right = -349.5
offset_bottom = -6.0
text = "drag:"

[node name="Amount Label" type="Label" parent="."]
offset_left = -168.5
offset_top = -27.0
offset_right = -19.5
offset_bottom = -4.0
text = "amount:"
metadata/_edit_use_anchors_ = true

[node name="Drag Controls" type="Node2D" parent="."]

[node name="OptionButton" type="OptionButton" parent="Drag Controls"]
offset_left = -409.5
offset_top = -33.0
offset_right = -285.5
offset_bottom = -6.0

[node name="VSlider" type="HSlider" parent="Drag Controls"]
offset_left = -92.5
offset_top = -36.0
offset_right = 129.5
offset_bottom = 4.0
max_value = 1.0
step = 0.01
metadata/_edit_use_anchors_ = true

[node name="Label Drag Force Amount Value" type="Label" parent="Drag Controls"]
offset_left = 144.5
offset_top = -27.0
offset_right = 293.5
offset_bottom = -4.0
text = "X"

[connection signal="pressed" from="Button Main" to="." method="_on_navigate_main"]
[connection signal="pressed" from="Button Reset" to="." method="_on_navigate_reset"]
[connection signal="item_selected" from="Drag Controls/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="Drag Controls/VSlider" to="." method="_on_v_slider_value_changed"]
